--- a/index.html
+++ b/index.html
@@ -611,9 +611,117 @@
 
         <footer>
             <div class="black-container">
-                <div>
-                    
-                </div>
+                    <div class="flex-item">
+
+                        <h2>
+                            Dropbox
+                        </h2>
+                        <ul>
+                            <li>
+                                <a href="#">Applicazione desktop</a>
+                            </li>
+                            <li>
+                                <a href="#">Perchè Dropbox</a>
+                            </li>
+                            <li>
+                                <a href="#">Piani</a>
+                            </li>
+                            <li>
+                                <a href="#">Sicurezza</a>
+                            </li>
+                            <li>
+                                <a href="#">Funzioni</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="flex-item">
+                        <h2>
+                            Prodotti
+                        </h2>
+                        <ul>
+                            <li>
+                                <a href="#">Applicazione desktop</a>
+                            </li>
+                            <li>
+                                <a href="#">Perchè Dropbox</a>
+                            </li>
+                            <li>
+                                <a href="#">Piani</a>
+                            </li>
+                            <li>
+                                <a href="#">Sicurezza</a>
+                            </li>
+                            <li>
+                                <a href="#">Funzioni</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="flex-item">
+                        <h2>
+                            Azienda
+                        </h2>
+                        <ul>
+                            <li>
+                                <a href="#">Applicazione desktop</a>
+                            </li>
+                            <li>
+                                <a href="#">Perchè Dropbox</a>
+                            </li>
+                            <li>
+                                <a href="#">Piani</a>
+                            </li>
+                            <li>
+                                <a href="#">Sicurezza</a>
+                            </li>
+                            <li>
+                                <a href="#">Funzioni</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="flex-item">
+                        <h2>
+                            Supporto
+                        </h2>
+                        <ul>
+                            <li>
+                                <a href="#">Applicazione desktop</a>
+                            </li>
+                            <li>
+                                <a href="#">Perchè Dropbox</a>
+                            </li>
+                            <li>
+                                <a href="#">Piani</a>
+                            </li>
+                            <li>
+                                <a href="#">Sicurezza</a>
+                            </li>
+                            <li>
+                                <a href="#">Funzioni</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="flex-item">
+                        <h2>
+                            Community
+                        </h2>
+                        <ul>
+                            <li>
+                                <a href="#">Applicazione desktop</a>
+                            </li>
+                            <li>
+                                <a href="#">Perchè Dropbox</a>
+                            </li>
+                            <li>
+                                <a href="#">Piani</a>
+                            </li>
+                            <li>
+                                <a href="#">Sicurezza</a>
+                            </li>
+                            <li>
+                                <a href="#">Funzioni</a>
+                            </li>
+                        </ul>
+                    </div>
             </div>
         </footer>
 </body>
