--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
 
                         </div>
                         
-                        <p class="paragraph-overflow">
+                        <blockquote class="paragraph-overflow">
                             "I membri del nostro team lavorano costantemente in Paesi, fusi orari e
                             uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze,
                             ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte
@@ -544,7 +544,7 @@
                             <br>
                             <br>
                             Morten Thomsen, Global IT Lead
-                        </p>
+                        </blockquote>
                     </div>
                     <div class="item-design">
                         <div class="column">
@@ -597,14 +597,23 @@
                     <span class="long-hr">
                         Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
                     </span>
+                    <div class="paragraph-hover">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus fugit nobis assumenda unde magnam blanditiis, minus quasi laborum repudiandae ratione quo atque voluptate delectus id corrupti deleniti eum perferendis sapiente.
+                    </div>
                     <hr>
                     <span class="long-hr">
                         Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
                     </span>
+                    <div class="paragraph-hover">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid asperiores, quaerat voluptatum temporibus similique quasi! Dolorum ducimus veritatis quibusdam dignissimos voluptates magnam officiis nesciunt excepturi, molestiae voluptate harum, dolor deserunt.
+                    </div>
                     <hr>
                     <span class="long-hr">
                         Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
                     </span>
+                    <div class="paragraph-hover">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro, recusandae! Tenetur provident ex numquam. Rem doloribus cumque, dolor blanditiis odit autem molestiae nisi amet necessitatibus non perferendis maiores minus veritatis?
+                    </div>
                 </div>
             </div>
         </main>
